<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black">

    <com.google.android.material.appbar.MaterialToolbar
        android:id="@+id/toolbar"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:navigationIcon="@drawable/ic_back"
        app:titleCentered="true"
        app:titleTextColor="@color/white"
        tools:title="Avatar" />

    <androidx.core.widget.NestedScrollView
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginBottom="8dp"
        app:layout_constraintBottom_toTopOf="@id/button_trailer"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/toolbar">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/backdrop"
                android:layout_width="0dp"
                android:layout_height="200dp"
                android:adjustViewBounds="true"
                android:scaleType="centerCrop"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:src="@tools:sample/avatars" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/release_date"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginBottom="8dp"
                android:background="@color/black_60"
                android:textColor="@color/white"
                android:textSize="18sp"
                app:layout_constraintBottom_toTopOf="@id/rating"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0"
                app:layout_constraintStart_toStartOf="parent"
                tools:text="@tools:sample/lorem" />

            <androidx.appcompat.widget.AppCompatRatingBar
                android:id="@+id/rating"
                style="@style/Widget.AppCompat.RatingBar.Small"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginBottom="8dp"
                android:background="@color/black_60"
                android:progressTint="@color/yellow"
                app:layout_constraintBottom_toTopOf="@id/container_genre"
                app:layout_constraintStart_toStartOf="parent"
                tools:rating="4" />

            <HorizontalScrollView
                android:id="@+id/container_genre"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="20dp"
                app:layout_constraintBottom_toBottomOf="@id/backdrop"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent">

                <com.google.android.material.chip.ChipGroup
                    android:id="@+id/chip_group_genre"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:selectionRequired="false" />

            </HorizontalScrollView>

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/description_label"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="20dp"
                android:layout_marginTop="16dp"
                android:text="@string/description"
                android:textColor="@color/white"
                android:textSize="24sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/backdrop" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/description"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="20dp"
                android:textColor="@color/white"
                android:textSize="18sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/description_label"
                tools:text="@tools:sample/lorem" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/button_review"
                style="@style/Widget.MaterialComponents.Button.OutlinedButton"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="20dp"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="8dp"
                android:text="@string/see_review"
                android:textColor="@color/yellow"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/description"
                app:strokeColor="@color/yellow"
                app:strokeWidth="1dp" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/caster_label"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="20dp"
                android:layout_marginTop="20dp"
                android:drawableEnd="@drawable/ic_arrow_more"
                android:gravity="center_vertical"
                android:text="@string/caster"
                android:textColor="@color/white"
                android:textSize="24sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/button_review" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recycler_caster"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="20dp"
                android:layout_marginTop="4dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/caster_label"
                tools:listitem="@layout/item_caster" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.core.widget.NestedScrollView>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/button_trailer"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"
        android:layout_marginBottom="8dp"
        android:backgroundTint="@android:color/holo_red_dark"
        android:text="@string/watch_trailer"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <ProgressBar
        android:id="@+id/progress"
        android:layout_width="32dp"
        android:layout_height="32dp"
        android:elevation="2dp"
        android:visibility="gone"
        android:indeterminateTint="@color/white"
        app:layout_constraintBottom_toBottomOf="@id/button_trailer"
        app:layout_constraintEnd_toEndOf="@id/button_trailer"
        app:layout_constraintStart_toStartOf="@id/button_trailer"
        app:layout_constraintTop_toTopOf="@id/button_trailer" />

</androidx.constraintlayout.widget.ConstraintLayout>